# SmartHome

./: CMakeLists.txt  LICENSE  README.md  main.cpp  qml.qrc  resources.qrc  translations.qrc
qml/: main.qml
qml/components/: BorderButton.qml  CheckBox.qml  ClickableText.qml  ColorIcon.qml  ColorImage.qml  ComboBox.qml  IconButton.qml
qml/pages/: BellPage.qml  CalendarPage.qml  ClockAlarmPage.qml  HomePage.qml  SettingsPage.qml  TrafficPage.qml
qml/widgets/: AlarmWidget.qml  ClockEdit.qml  DatePicker.qml  HourWeatherWidget.qml  LocationWidget.qml  WeatherWidget.qml
src/alarm/: AlarmData.cpp  AlarmData.h  AlarmManager.cpp  AlarmManager.h  AlarmObserver.cpp  AlarmObserver.h  DateUtils.cpp  DateUtils.h
src/database/: Alarm.h  DbManager.cpp  DbManager.h  Settings.h
src/datetime/: DateTimeSource.cpp  DateTimeSource.h
src/location/: LocationSource.cpp  LocationSource.h
src/network/: NetworkManager.cpp  NetworkManager.h
src/settings/: SettingsManager.cpp  SettingsManager.h
src/settings/model/: LanguageModel.cpp  LanguageModel.h  ThemeModel.cpp  ThemeModel.h  WallpaperModel.cpp  WallpaperModel.h
src/settings/theme/: AbstractTheme.h  DarkTheme.cpp  DarkTheme.h  LightTheme.cpp  LightTheme.h
src/weather/: WeatherForecastModel.cpp  WeatherForecastModel.h  WeatherInfo.h  WeatherSource.cpp  WeatherSource.h
translations/: SmartHome_de_DE.ts  SmartHome_en_US.ts  SmartHome_pl_PL.ts  SmartHome_ru_RU.ts
